--- a/package.json
+++ b/package.json
@@ -7,17 +7,27 @@
     },
     "devDependencies": {
         "@headlessui/react": "^2.0.0",
-        "@inertiajs/react": "^2.0.0",
+        "@inertiajs/react": "^2.0.3",
         "@tailwindcss/forms": "^0.5.3",
-        "@vitejs/plugin-react": "^4.2.0",
+        "@vitejs/plugin-react": "^1.3.2",
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.0",
+        "esbuild": "^0.25.0",
+        "laravel-vite-plugin": "^1.2.0",
+        "npm-force-resolutions": "^0.0.10",
         "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "rollup": "^2.79.2",
         "tailwindcss": "^3.2.1",
-        "vite": "^6.0"
+        "vite": "^6.1.0"
+    },
+    "resolutions": {
+        "esbuild": "0.25.0"
+    },
+    "dependencies": {
+        "lucide-react": "^0.475.0",
+        "react-feather": "^2.0.10"
     }
 }
