--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.7.4",
+        "axios": "^1.7.9",
         "concurrently": "^9.0.1",
         "esbuild": "^0.25.0",
         "laravel-vite-plugin": "^1.2.0",
@@ -24,5 +24,9 @@
         "rollup": "^2.79.2",
         "tailwindcss": "^3.2.1",
         "vite": "^6.1.0"
+    },
+    "dependencies": {
+        "lucide-react": "^0.475.0",
+        "react-router-dom": "^7.2.0"
     }
 }
