--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "lucide-react": "^0.475.0",
         "react-feather": "^2.0.10",
-        "react-router-dom": "^7.2.0"
+        "react-router-dom": "^7.2.0",
+        "ziggy-js": "^2.5.1"
     }
 }
