--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@heroicons/react": "^2.2.0",
         "lucide-react": "^0.475.0",
         "react-feather": "^2.0.10",
         "react-icons": "^5.5.0",
