--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "date-fns": "^4.1.0",
         "lucide-react": "^0.475.0",
         "react-feather": "^2.0.10",
+        "react-hot-toast": "^2.5.2",
         "react-icons": "^5.5.0",
         "react-router-dom": "^7.2.0",
         "ziggy-js": "^2.5.1"
