--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@heroicons/react": "^2.2.0",
+        "build": "^0.1.4",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.475.0",
         "react-feather": "^2.0.10",
