--- a/package.json
+++ b/package.json
@@ -26,15 +26,21 @@
         "vite": "^6.1.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@heroicons/react": "^2.2.0",
+        "@mui/icons-material": "^6.4.7",
+        "@mui/material": "^6.4.7",
+        "@mui/styles": "^6.4.7",
         "date-fns": "^4.1.0",
         "js-yaml": "^4.1.0",
         "lucide-react": "^0.475.0",
         "react-feather": "^2.0.10",
         "react-hot-toast": "^2.5.2",
         "react-icons": "^5.5.0",
+        "react-organizational-chart": "^2.2.1",
         "react-router-dom": "^7.2.0",
         "uglify-js": "^3.19.3",
         "ziggy-js": "^2.5.1"
