--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "date-fns": "^4.1.0",
         "js-yaml": "^4.1.0",
         "lucide-react": "^0.475.0",
+        "qrcode.react": "^4.2.0",
         "react-beautiful-dnd": "^13.1.1",
         "react-feather": "^2.0.10",
         "react-hot-toast": "^2.5.2",
