Added Pdfs for Maharat Invoice and RFQ

--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
         "@mui/styles": "^6.4.7",
         "date-fns": "^4.1.0",
         "js-yaml": "^4.1.0",
+        "jspdf": "^3.0.1",
+        "jspdf-autotable": "^5.0.2",
         "lucide-react": "^0.475.0",
+        "qrcode": "^1.5.4",
         "qrcode.react": "^4.2.0",
         "react-beautiful-dnd": "^13.1.1",
         "react-feather": "^2.0.10",
