--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "react-organizational-chart": "^2.2.1",
         "react-router-dom": "^7.2.0",
         "uglify-js": "^3.19.3",
+        "xlsx": "^0.18.5",
         "ziggy-js": "^2.5.1"
     }
 }
